# aimouse

./: .gitignore  DEPLOYMENT_GUIDE.md  INSTALL.md  README.md  pyproject.toml  run_sim.sh  run_training.py  setup_env.sh
docs/: policy.md
docs/plans/: gui_design_specification.md  intent.md  policy.md  rationale_mouse_interface.md  reflex_layer.md  system_architecture_split.md  technical_specification_inference_engine.md  technical_specification_training_ecosystem.md  training_environment_specification.md
src/common/: constants.py  screen_manager.py  types.py  vision_encoder.py  vision_tool.py
src/inference/: actuator.py  api.py  engine.py  loader.py  processor.py
src/training/: app.py  cli.py  evaluator.py  exporter.py  gui.py  optimizer.py  simulator.py  visualizer.py
