[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-mouse-interface"
version = "0.1.0"
description = "A high-frequency neural/evolutionary mouse control interface for LLMs."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Project Lead"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "onnxruntime",
    "pynput",
    "opencv-python",
    "pygame",
] 

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
